[tool.poetry]
name = "promptfunction"
version = "0.1.0"
description = "Integrated organization Prompt function structure. Functional AI lib developed based on langchain"
authors = ["NINTING <1075364860@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.217"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
