[tool.poetry]
name = "promptfunction"
version = "0.0.1"
description = "Integrated organization Prompt function structure. Functional AI lib developed based on langchain"
authors = ["NINTING <1075364860@qq.com>"]
license = "MIT"
readme = "README.md"


homepage = "https://github.com/NINTING/PromptFunction.git"
repository = "https://github.com/NINTING/PromptFunction"
[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.217"
jinja2 = "^3.1.2"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
langchainex = {path = "D:/GPT/LangChainEx", develop = true}
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = 'default'
